@@ -1,103 +1,65 @@
 /*******************************************************************************
- * HellFirePvP / Astral Sorcery 2022
- *
- * All rights reserved.
- * The source code is available on github: https://github.com/HellFirePvP/AstralSorcery
+ * HellFirePvP / Astral Sorcery 2026<p>
+ * <p>
+ * All rights reserved.<p>
+ * The source code is available on github: https://github.com/HellFirePvP/AstralSorcery<p>
  * For further details, see the License file there.
  ******************************************************************************/
 
 package hellfirepvp.astralsorcery.common.perk;
 
 import com.google.common.collect.Lists;
+import hellfirepvp.astralsorcery.common.component.DynamicModifiersComponent;
+import hellfirepvp.astralsorcery.common.component.IdentifierComponent;
+import hellfirepvp.astralsorcery.common.lib.DataComponentsAS;
 import hellfirepvp.astralsorcery.common.perk.modifier.DynamicAttributeModifier;
 import hellfirepvp.astralsorcery.common.perk.modifier.PerkAttributeModifier;
 import hellfirepvp.astralsorcery.common.perk.source.AttributeModifierProvider;
 import hellfirepvp.astralsorcery.common.perk.source.provider.equipment.EquipmentAttributeModifierProvider;
-import hellfirepvp.astralsorcery.common.perk.type.ModifierType;
-import hellfirepvp.astralsorcery.common.perk.type.PerkAttributeType;
-import hellfirepvp.astralsorcery.common.util.nbt.NBTHelper;
-import net.minecraft.client.Minecraft;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.text.Style;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.common.util.Constants;
-import net.minecraftforge.fml.LogicalSide;
+import hellfirepvp.astralsorcery.common.perk.type.base.ModifierType;
+import hellfirepvp.astralsorcery.common.perk.type.base.PerkAttributeType;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
+import net.neoforged.fml.LogicalSide;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
 
 /**
  * This class is part of the Astral Sorcery Mod
- * The complete source code for this mod can be found on github.
+ * The complete source code for this mod can be found on GitHub.
  * Class: DynamicModifierHelper
  * Created by HellFirePvP
- * Date: 02.04.2020 / 19:57
+ * Date: 07.09.2026 / 10:00
  */
 public class DynamicModifierHelper {
 
-    public static final String KEY_MODIFIERS = "attribute_modifiers";
-
-    public static void addModifier(ItemStack stack, UUID uuid, PerkAttributeType type, ModifierType mode, float value) {
-        addModifier(stack, new DynamicAttributeModifier(uuid, type, mode, value));
+    public static void addModifier(ItemStack stack, String identifier, PerkAttributeType type, ModifierType mode, float value) {
+        addModifier(stack, new DynamicAttributeModifier(identifier, type, mode, value));
     }
 
-    public static void addModifier(ItemStack stack, DynamicAttributeModifier modifier) {
-        addModifiers(stack, Collections.singletonList(modifier));
+    public static void addModifier(ItemStack stack, DynamicAttributeModifier... modifiers) {
+        addModifier(stack, List.of(modifiers));
     }
 
-    public static void addModifiers(ItemStack stack, Iterable<DynamicAttributeModifier> modifiers) {
-        CompoundNBT tag = NBTHelper.getPersistentData(stack);
-        ListNBT modifierList = tag.getList(KEY_MODIFIERS, Constants.NBT.TAG_COMPOUND);
-        modifiers.forEach(modifier -> modifierList.add(modifier.serialize()));
-        tag.put(KEY_MODIFIERS, modifierList);
+    public static void addModifier(ItemStack stack, List<DynamicAttributeModifier> modifiers) {
+        DynamicModifiersComponent component = stack.getOrDefault(DataComponentsAS.DYNAMIC_MODIFIERS, DynamicModifiersComponent.EMPTY);
+        component = component.add(modifiers);
+        stack.set(DataComponentsAS.DYNAMIC_MODIFIERS, component);
+        IdentifierComponent.createIdentifierIfNotExists(stack);
     }
 
-    public static List<PerkAttributeModifier> getDynamicModifiers(ItemStack stack, PlayerEntity player, LogicalSide side, boolean ignoreRequirements) {
+    public static List<PerkAttributeModifier> getModifiers(ItemStack stack, Player player, LogicalSide side, boolean ignoreRequirements) {
         List<PerkAttributeModifier> modifiers = Lists.newArrayList();
-        if (stack.getItem() instanceof AttributeModifierProvider) {
-            modifiers.addAll(((AttributeModifierProvider) stack.getItem()).getModifiers(player, side, ignoreRequirements));
+
+        if (stack.getItem() instanceof AttributeModifierProvider modifierProvider) {
+            modifiers.addAll(modifierProvider.getModifiers(player, side, ignoreRequirements));
         }
-        if (stack.getItem() instanceof EquipmentAttributeModifierProvider) {
-            modifiers.addAll(((EquipmentAttributeModifierProvider) stack.getItem()).getModifiers(stack.copy(), player, side, ignoreRequirements));
+        if (stack.getItem() instanceof EquipmentAttributeModifierProvider modifierProvider) {
+            modifiers.addAll(modifierProvider.getModifiers(stack, player, side, ignoreRequirements));
         }
-        modifiers.addAll(getStaticModifiers(stack));
+        DynamicModifiersComponent component = stack.getOrDefault(DataComponentsAS.DYNAMIC_MODIFIERS, DynamicModifiersComponent.EMPTY);
+        modifiers.addAll(component.modifiers());
+
         return modifiers;
     }
-
-    public static List<DynamicAttributeModifier> getStaticModifiers(ItemStack stack) {
-        List<DynamicAttributeModifier> modifiers = Lists.newArrayList();
-        if (NBTHelper.hasPersistentData(stack)) {
-            CompoundNBT tag = NBTHelper.getPersistentData(stack);
-            ListNBT modifierList = tag.getList(KEY_MODIFIERS, Constants.NBT.TAG_COMPOUND);
-            for (int i = 0; i < modifierList.size(); i++) {
-                CompoundNBT modifierTag = modifierList.getCompound(i);
-                modifiers.add(DynamicAttributeModifier.deserialize(modifierTag));
-            }
-        }
-        return modifiers;
-    }
-    @OnlyIn(Dist.CLIENT)
-    public static void addModifierTooltip(ItemStack stack, List<ITextComponent> tooltip) {
-        PlayerEntity clientPlayer = Minecraft.getInstance().player;
-        if (clientPlayer == null) {
-            return;
-        }
-
-        for (PerkAttributeModifier mod : DynamicModifierHelper.getDynamicModifiers(stack, Minecraft.getInstance().player, LogicalSide.CLIENT, false)) {
-            if (mod.hasDisplayString()) {
-                tooltip.add(new StringTextComponent(mod.getLocalizedDisplayString())
-                        .mergeStyle(TextFormatting.GRAY)
-                        .mergeStyle(TextFormatting.ITALIC));
-            }
-        }
-    }
-
 }
